# xnet

./: CMakeLists.txt  README.md
examples/: download_mnist.sh  mnist.cpp
lib/: catch.hpp
src/: BaseLayer.hpp  FullLayer.cpp  FullLayer.hpp  ReluLayer.cpp  ReluLayer.hpp  Sequential.cpp  Sequential.hpp  SoftmaxLoss.cpp  SoftmaxLoss.hpp  mat.hpp
test/: test_full.cpp  test_relu.cpp  test_sequential.cpp  test_softmaxloss.cpp
